--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://fonts googleapis.com">
     <link rel="shortcut icon" href="img/spotify_icon_130826.ico" />
+    <link rel="stylesheet" href="style.css">
     <!--FONT GOOGLE-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
@@ -12,6 +13,21 @@
     <title>Spotify</title>
 </head>
 <body>
-    
+    <div class="container clearfix">
+        <nav class="nav-header">
+
+        </nav>
+        <div class="main-content">
+            <header>
+
+            </header>
+            <main>
+
+            </main>
+        </div>
+        <nav class="nav-footer">
+            
+        </nav>
+    </div>
 </body>
 </html>
