--- a/index.html
+++ b/index.html
@@ -13,21 +13,29 @@
     <title>Spotify</title>
 </head>
 <body>
-    <div class="container clearfix">
-        <nav class="nav-header">
+    <div class="container clearfix width-100">
+        <!--inizio nav-header-->
+        <nav class="nav-header width-100">
 
         </nav>
-        <div class="main-content">
-            <header>
+        <!--fine nav header-->
+
+        <!--inizio main/header-->
+        <div class="main-content width-100 height-100">
+            <header class="height-90">
 
             </header>
-            <main>
+            <main class="height-90">
 
             </main>
         </div>
-        <nav class="nav-footer">
+        <!--fine main/header-->
+
+        <!--inizio nav-footer-->
+        <nav class="nav-footer width-100">
             
         </nav>
+        <!--fine nav-footer-->
     </div>
 </body>
 </html>
