miglioramento_header_nav

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div class="container clearfix width-100">
         <!--inizio nav-header-->
         <nav class="nav-header width-100">
-
+            <a href="#" class="btn">EFFETTUA L'UPGRADE</a>
         </nav>
         <!--fine nav header-->
 
         <!--inizio main/header-->
         <div class="main-content width-100 height-100">
-            <header class="height-90">
-
+            <header>
+                <img src="img/logo.svg" alt="logo-spotify">
             </header>
-            <main class="height-90">
+            <main>
 
             </main>
         </div>
