--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
 
         <!--inizio main/header-->
         <div class="main-content width-100 height-100">
+            <!--inizio header-->
             <header>
                 <img src="img/logo.svg" alt="logo-spotify">
             </header>
-            <main>
+            <!--fine header-->
 
+            <!--inizio main-->
+            <main>
             </main>
+            <!--fine main-->
         </div>
         <!--fine main/header-->
 
