--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://fonts googleapis.com">
     <link rel="shortcut icon" href="img/spotify_icon_130826.ico" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--FONT GOOGLE-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
@@ -25,6 +26,18 @@
             <!--inizio header-->
             <header>
                 <img src="img/logo.svg" alt="logo-spotify">
+                <ul class="home-list">
+                    <li><div></div><button><i class="fas fa-home"></i> Home</button></li>
+                    <li><div></div><button><i class="fas fa-search"></i> Cerca</button></li>
+                    <li><div></div><button><i class="fas fa-book-open"></i> La tua libreiria</button></li>
+                </ul>
+
+                <div class="playlist">
+                    <span>PLAYLIST</span>
+                    <ul class="playlist-list">
+                        
+                    </ul>
+                </div>
             </header>
             <!--fine header-->
 
