--- a/index.html
+++ b/index.html
@@ -35,8 +35,19 @@
                 <div class="playlist">
                     <span>PLAYLIST</span>
                     <ul class="playlist-list">
-                        
+                        <li><button><i class="fas fa-plus-square"></i> Crea Playlist</li></button>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
                     </ul>
+                </div>
+
+                <div class="playlist-footer">
+                    
                 </div>
             </header>
             <!--fine header-->
