--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 </div>
 
                 <div class="playlist-footer">
-                    
+                    <button><i class="fas fa-arrow-circle-down"></i>  Installa app</button>
+                    <hr>
+                    <button><i class="far fa-user-circle"></i><span> John Doe</span></button>
                 </div>
             </header>
             <!--fine header-->
