piccoli_aggiustamenti_nav_footer

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
                 <div class="playlist-footer">
                     <button><i class="fas fa-arrow-circle-down"></i>  Installa app</button>
-                    <hr>
-                    <button><i class="far fa-user-circle"></i><span> John Doe</span></button>
+                    <div></div>
+                    <button><i class="fas fa-user-circle"></i><span> John Doe</span></button>
                 </div>
             </header>
             <!--fine header-->
