--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
 
             <!--inizio main-->
             <main>
+               <div class="nav-main">
+                   <ul>
+                       <li><button>IN EVIDENZA<hr></button></li>
+                       <li><button>PODCAST<hr></button></li>
+                       <li><button>CLASSIFICHE<hr></button></li>
+                       <li><button>GENERI E MOOD<hr></button></li>
+                       <li><button>NUOVE USCITE<hr></button></li>
+                       <li><button>SCOPRI<hr></button></li>
+                   </ul>
+               </div> 
             </main>
             <!--fine main-->
         </div>
