--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
 
         <!--inizio nav-footer-->
         <nav class="nav-footer width-100">
-            
+            <div class="nav-footer-sx height-100">
+
+            </div>
+            <div class="nav-footer-cx height-100">
+
+            </div>
+            <div class="nav-footer-dx height-100">
+
+            </div>
         </nav>
         <!--fine nav-footer-->
     </div>
