--- a/index.html
+++ b/index.html
@@ -74,7 +74,15 @@
         <!--inizio nav-footer-->
         <nav class="nav-footer width-100">
             <div class="nav-footer-sx height-100">
-
+                <img src="img/sinister.jpeg" alt="sinister">
+                <div class="nav-footer-sx-name">
+                    <h1>Sinister</h1>
+                    <span>Brano Nome</span>
+                </div>    
+                <div class="nav-footer-sx-ico">
+                    <i class="far fa-heart"></i>
+                    <i class="far fa-folder"></i>
+                </div>
             </div>
             <div class="nav-footer-cx height-100">
 
