--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
         <!--inizio nav-footer-->
         <nav class="nav-footer width-100">
+            <!--nav footer sx-->
             <div class="nav-footer-sx height-100">
                 <img src="img/sinister.jpeg" alt="sinister">
                 <div class="nav-footer-sx-name">
@@ -80,13 +81,29 @@
                     <span>Brano Nome</span>
                 </div>    
                 <div class="nav-footer-sx-ico">
-                    <i class="far fa-heart"></i>
-                    <i class="far fa-folder"></i>
+                    <button><i class="far fa-heart"></i></button>
+                    <button><i class="far fa-folder"></i></button>
                 </div>
             </div>
-            <div class="nav-footer-cx height-100">
 
+            <!--nav-footer-cx-->
+            <div class="nav-footer-cx height-100">
+                <div class="nav-footer-cx-top">
+                    <ul>
+                        <li><button class="normale"><i class="fas fa-random"></i></button></li>
+                        <li><button class="normale"><i class="fas fa-step-backward"></i></button></li>
+                        <li><button class="play"><i class="far fa-play-circle"></i></button></li>
+                        <li><button class="normale"><i class="fas fa-step-forward"></i></button></li>
+                        <li><button class="normale"><i class="fas fa-undo-alt"></i></button></li>
+                    </ul>
+                </div>
+                <div class="nav-footer-cx-bottom">
+                    <span>0.25</span>
+                    <span>4.35</span>
+                </div>
             </div>
+
+            <!--nav-footer-dx-->
             <div class="nav-footer-dx height-100">
 
             </div>
