--- a/index.html
+++ b/index.html
@@ -99,13 +99,27 @@
                 </div>
                 <div class="nav-footer-cx-bottom">
                     <span>0.25</span>
+                    <div>
+                         <div class="green-time-music"></div>
+                         <div class="grey-time-music"></div>
+                         <div class="pointer-music"></div>
+                    </div>
                     <span>4.35</span>
                 </div>
             </div>
 
             <!--nav-footer-dx-->
             <div class="nav-footer-dx height-100">
-
+                <ul>
+                    <li><button><i class="fas fa-ellipsis-v"></i></button></li>
+                    <li><button><i class="fas fa-desktop"></i></button></li>
+                    <li><button><i class="fas fa-volume-up"></i></button></li>
+                </ul>
+                <div class="volume">
+                    <div class="green-time-volume"></div>
+                    <div class="grey-time-volume"></div>
+                    <div class="pointer-volume"></div>
+               </div>
             </div>
         </nav>
         <!--fine nav-footer-->
