--- a/index.html
+++ b/index.html
@@ -66,6 +66,60 @@
                        <li><button>SCOPRI<hr></button></li>
                    </ul>
                </div> 
+
+               <div class="main-song">
+                   <!--Recenti-->
+                   <div class="Recentli">
+                       <h2>Recently Played</h2>
+                       <div class="Recenti-album">
+                           <div class="album">
+                               <img src="img/metal_lifting.jpg" alt="metal_lifting">
+                               <h3>Heavy Metal</h3>
+                               <span>Subtitle</span>
+                           </div>
+                           <div class="album">
+                               <img src="img/stranger.jpeg" alt="stranger">
+                               <h3>Stranger Things, Vol. 1 (a Neetflix Original Series Soungtrack)</h3>
+                               <span>Kyle Dixon & Micheal Stein</span>
+                           </div>
+                           <div class="album">
+                               <img src="img/aquietplace.jpeg" alt="aquietplace">
+                               <h3>A quiet place</h3>
+                               <span>Subtitle</span>
+                           </div>
+                           <div class="album">
+                               <img src="img/split.jpeg" alt="split">
+                               <h3>Split</h3>
+                               <span>Subtitle</span>
+                            </div>
+                           <div class="album">
+                               <img src="img/cure.jpeg" alt="cure">
+                               <h3>A cure for wellness</h3>
+                               <span>Subtitle</span>
+                            </div>
+                           <div class="album">
+                               <img src="img/sinister.jpeg" alt="sinister">
+                               <h3>Sinister</h3>
+                               <span>Subtitle</span>
+                            </div>
+                       </div>
+                   </div>
+                   <!--Eecenti-->
+
+                   <!--creato per John Doe-->
+                   <div class="Creato-per">
+                       <h2>Creato Per John Doe</h2>
+                       <span>Pi&uacute; ascolti,pi&uacute; accurati saranno i suggerimenti</span>
+                   </div>
+                    <!--/creato per John Doe-->
+
+                    <!--popolari-->
+                   <div class="popolari">
+                       <h2>Artisti pi&uacute; popolari</h2>
+                       <span>Pi&uacute; ascolti,pi&uacute; accurati saranno i suggerimenti</span>
+                   </div>
+                   <!--popolari-->
+               </div>
             </main>
             <!--fine main-->
         </div>
