--- a/index.html
+++ b/index.html
@@ -73,31 +73,49 @@
                        <h2>Recently Played</h2>
                        <div class="Recenti-album">
                            <div class="album">
+                               <div class="play-button">
+                                    <button><i class="fas fa-play-circle"></i></button>
+                               </div>
                                <img src="img/metal_lifting.jpg" alt="metal_lifting">
                                <h3>Heavy Metal</h3>
                                <span>Subtitle</span>
                            </div>
                            <div class="album">
+                                <div class="play-button">
+                                    <button><i class="fas fa-play-circle"></i></button>
+                                </div>
                                <img src="img/stranger.jpeg" alt="stranger">
                                <h3>Stranger Things, Vol. 1 (a Neetflix Original Series Soungtrack)</h3>
                                <span>Kyle Dixon & Micheal Stein</span>
                            </div>
                            <div class="album">
+                                <div class="play-button">
+                                    <button><i class="fas fa-play-circle"></i></button>
+                                </div>
                                <img src="img/aquietplace.jpeg" alt="aquietplace">
                                <h3>A quiet place</h3>
                                <span>Subtitle</span>
                            </div>
                            <div class="album">
+                                <div class="play-button">
+                                    <button><i class="fas fa-play-circle"></i></button>
+                                </div>
                                <img src="img/split.jpeg" alt="split">
                                <h3>Split</h3>
                                <span>Subtitle</span>
                             </div>
                            <div class="album">
+                                <div class="play-button">
+                                    <button><i class="fas fa-play-circle"></i></button>
+                                </div>
                                <img src="img/cure.jpeg" alt="cure">
                                <h3>A cure for wellness</h3>
                                <span>Subtitle</span>
                             </div>
                            <div class="album">
+                                <div class="play-button">
+                                    <button><i class="fas fa-play-circle"></i></button>
+                                </div>
                                <img src="img/sinister.jpeg" alt="sinister">
                                <h3>Sinister</h3>
                                <span>Subtitle</span>
