--- a/index.html
+++ b/index.html
@@ -126,8 +126,18 @@
 
                    <!--creato per John Doe-->
                    <div class="Creato-per">
-                       <h2>Creato Per John Doe</h2>
-                       <span>Pi&uacute; ascolti,pi&uacute; accurati saranno i suggerimenti</span>
+                        <h2>Creato Per John Doe</h2>
+                        <span>Pi&uacute; ascolti,pi&uacute; accurati saranno i suggerimenti</span>
+                        <div class="Creato-per-playlist">
+                            <div class="list">
+                                <img src="img/radar.jpeg" alt="radar">
+                               <h3>A cure for wellness</h3>
+                            </div>
+                            <div class="list">
+                                <img src="img/mixdaily.jpeg" alt="mixdaily">
+                                <h3>A cure for wellness</h3>
+                            </div>
+                        </div>
                    </div>
                     <!--/creato per John Doe-->
 
