--- a/index.html
+++ b/index.html
@@ -130,10 +130,16 @@
                         <span>Pi&uacute; ascolti,pi&uacute; accurati saranno i suggerimenti</span>
                         <div class="Creato-per-playlist">
                             <div class="list">
+                                <div class="playlist-button">
+                                    <button><i class="fas fa-play-circle"></i></button>
+                                </div>
                                 <img src="img/radar.jpeg" alt="radar">
                                <h3>A cure for wellness</h3>
                             </div>
                             <div class="list">
+                                <div class="playlist-button">
+                                    <button><i class="fas fa-play-circle"></i></button>
+                                </div>
                                 <img src="img/mixdaily.jpeg" alt="mixdaily">
                                 <h3>A cure for wellness</h3>
                             </div>
