--- a/index.html
+++ b/index.html
@@ -148,9 +148,25 @@
                     <!--/creato per John Doe-->
 
                     <!--popolari-->
-                   <div class="popolari">
+                   <div class="Popolari">
                        <h2>Artisti pi&uacute; popolari</h2>
                        <span>Pi&uacute; ascolti,pi&uacute; accurati saranno i suggerimenti</span>
+                       <div class="Artisti-popolari">
+                            <div class="artista">
+                                <div class="artista-button">
+                                    <button><i class="fas fa-play-circle"></i></button>
+                                </div>
+                                <img src="img/youg.jpeg" alt="youg">
+                                <span>Lana del Rey</span>
+                            </div>
+                            <div class="artista">
+                                <div class="artista-button">
+                                    <button><i class="fas fa-play-circle"></i></button>
+                                </div>
+                                <img src="img/einaudi.jpeg" alt="einaudi">
+                                <span>Ludovico Einaudi</span>
+                            </div>
+                       </div>
                    </div>
                    <!--popolari-->
                </div>
