--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <header>
                 <img src="img/logo.svg" alt="logo-spotify">
                 <ul class="home-list">
-                    <li><div></div><button><i class="fas fa-home"></i> Home</button></li>
-                    <li><div></div><button><i class="fas fa-search"></i> Cerca</button></li>
-                    <li><div></div><button><i class="fas fa-book-open"></i> La tua libreiria</button></li>
+                    <li><div class="height-100"></div><button><i class="fas fa-home"></i> Home</button></li>
+                    <li><div class="height-100"></div><button><i class="fas fa-search"></i> Cerca</button></li>
+                    <li><div class="height-100"></div><button><i class="fas fa-book-open"></i> La tua libreiria</button></li>
                 </ul>
 
-                <div class="playlist">
+                <div class="playlist width-100">
                     <span>PLAYLIST</span>
                     <ul class="playlist-list">
                         <li><button><i class="fas fa-plus-square"></i> Crea Playlist</li></button>
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
 
-                <div class="playlist-footer">
+                <div class="playlist-footer width-100">
                     <button><i class="fas fa-arrow-circle-down"></i>  Installa app</button>
                     <div></div>
                     <button><i class="fas fa-user-circle"></i><span> John Doe</span></button>
@@ -67,11 +67,11 @@
                    </ul>
                </div> 
 
-               <div class="main-song">
+               <div class="main-song width-100">
                    <!--Recenti-->
                    <div class="Recentli">
                        <h2>Recently Played</h2>
-                       <div class="Recenti-album">
+                       <div class="Recenti-album width-100">
                            <div class="album">
                                <div class="play-button">
                                     <button><i class="fas fa-play-circle"></i></button>
@@ -128,7 +128,7 @@
                    <div class="Creato-per">
                         <h2>Creato Per John Doe</h2>
                         <span>Pi&uacute; ascolti,pi&uacute; accurati saranno i suggerimenti</span>
-                        <div class="Creato-per-playlist">
+                        <div class="Creato-per-playlist width-100">
                             <div class="list">
                                 <div class="playlist-button">
                                     <button><i class="fas fa-play-circle"></i></button>
@@ -151,7 +151,7 @@
                    <div class="Popolari">
                        <h2>Artisti pi&uacute; popolari</h2>
                        <span>Pi&uacute; ascolti,pi&uacute; accurati saranno i suggerimenti</span>
-                       <div class="Artisti-popolari">
+                       <div class="Artisti-popolari width-100">
                             <div class="artista">
                                 <div class="artista-button">
                                     <button><i class="fas fa-play-circle"></i></button>
@@ -179,7 +179,7 @@
         <nav class="nav-footer width-100">
             <!--nav footer sx-->
             <div class="nav-footer-sx height-100">
-                <img src="img/sinister.jpeg" alt="sinister">
+                <img src="img/sinister.jpeg" alt="sinister" class="height-100">
                 <div class="nav-footer-sx-name">
                     <h1>Sinister</h1>
                     <span>Brano Nome</span>
@@ -192,7 +192,7 @@
 
             <!--nav-footer-cx-->
             <div class="nav-footer-cx height-100">
-                <div class="nav-footer-cx-top">
+                <div class="nav-footer-cx-top width-100">
                     <ul>
                         <li><button class="normale"><i class="fas fa-random"></i></button></li>
                         <li><button class="normale"><i class="fas fa-step-backward"></i></button></li>
@@ -201,7 +201,7 @@
                         <li><button class="normale"><i class="fas fa-undo-alt"></i></button></li>
                     </ul>
                 </div>
-                <div class="nav-footer-cx-bottom">
+                <div class="nav-footer-cx-bottom width-100">
                     <span>0.25</span>
                     <div>
                          <div class="green-time-music"></div>
