--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <title>Spotify</title>
 </head>
 <body>
-    <div class="container clearfix width-100">
+    <div class="container clearfix">
         <!--inizio nav-header-->
-        <nav class="nav-header width-100">
+        <nav class="nav-header">
             <a href="#" class="btn">EFFETTUA L'UPGRADE</a>
         </nav>
         <!--fine nav header-->
 
         <!--inizio main/header-->
-        <div class="main-content width-100 height-100">
+        <div class="main-content">
             <!--inizio header-->
             <header>
                 <img src="img/logo.svg" alt="logo-spotify">
@@ -32,7 +32,7 @@
                     <li><div class="height-100"></div><button><i class="fas fa-book-open"></i> La tua libreiria</button></li>
                 </ul>
 
-                <div class="playlist width-100">
+                <div class="playlist">
                     <span>PLAYLIST</span>
                     <ul class="playlist-list">
                         <li><button><i class="fas fa-plus-square"></i> Crea Playlist</li></button>
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
 
-                <div class="playlist-footer width-100">
+                <div class="playlist-footer">
                     <button><i class="fas fa-arrow-circle-down"></i>  Installa app</button>
                     <div></div>
                     <button><i class="fas fa-user-circle"></i><span> John Doe</span></button>
@@ -67,11 +67,11 @@
                    </ul>
                </div> 
 
-               <div class="main-song width-100">
+               <div class="main-song">
                    <!--Recenti-->
                    <div class="Recentli">
                        <h2>Recently Played</h2>
-                       <div class="Recenti-album width-100">
+                       <div class="Recenti-album">
                            <div class="album">
                                <div class="play-button">
                                     <button><i class="fas fa-play-circle"></i></button>
@@ -128,7 +128,7 @@
                    <div class="Creato-per">
                         <h2>Creato Per John Doe</h2>
                         <span>Pi&uacute; ascolti,pi&uacute; accurati saranno i suggerimenti</span>
-                        <div class="Creato-per-playlist width-100">
+                        <div class="Creato-per-playlist">
                             <div class="list">
                                 <div class="playlist-button">
                                     <button><i class="fas fa-play-circle"></i></button>
@@ -151,7 +151,7 @@
                    <div class="Popolari">
                        <h2>Artisti pi&uacute; popolari</h2>
                        <span>Pi&uacute; ascolti,pi&uacute; accurati saranno i suggerimenti</span>
-                       <div class="Artisti-popolari width-100">
+                       <div class="Artisti-popolari">
                             <div class="artista">
                                 <div class="artista-button">
                                     <button><i class="fas fa-play-circle"></i></button>
@@ -176,9 +176,9 @@
         <!--fine main/header-->
 
         <!--inizio nav-footer-->
-        <nav class="nav-footer width-100">
+        <nav class="nav-footer">
             <!--nav footer sx-->
-            <div class="nav-footer-sx height-100">
+            <div class="nav-footer-sx">
                 <img src="img/sinister.jpeg" alt="sinister" class="height-100">
                 <div class="nav-footer-sx-name">
                     <h1>Sinister</h1>
@@ -191,8 +191,8 @@
             </div>
 
             <!--nav-footer-cx-->
-            <div class="nav-footer-cx height-100">
-                <div class="nav-footer-cx-top width-100">
+            <div class="nav-footer-cx">
+                <div class="nav-footer-cx-top">
                     <ul>
                         <li><button class="normale"><i class="fas fa-random"></i></button></li>
                         <li><button class="normale"><i class="fas fa-step-backward"></i></button></li>
@@ -201,7 +201,7 @@
                         <li><button class="normale"><i class="fas fa-undo-alt"></i></button></li>
                     </ul>
                 </div>
-                <div class="nav-footer-cx-bottom width-100">
+                <div class="nav-footer-cx-bottom">
                     <span>0.25</span>
                     <div>
                          <div class="green-time-music"></div>
@@ -213,7 +213,7 @@
             </div>
 
             <!--nav-footer-dx-->
-            <div class="nav-footer-dx height-100">
+            <div class="nav-footer-dx">
                 <ul>
                     <li><button><i class="fas fa-ellipsis-v"></i></button></li>
                     <li><button><i class="fas fa-desktop"></i></button></li>
