--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <!--inizio header-->
             <header>
                 <img src="img/logo.svg" alt="logo-spotify">
+                <img src="img/favicon.ico" alt="logo" class="icona">
                 <ul class="home-list">
-                    <li><div class="height-100"></div><button><i class="fas fa-home"></i> Home</button></li>
-                    <li><div class="height-100"></div><button><i class="fas fa-search"></i> Cerca</button></li>
-                    <li><div class="height-100"></div><button><i class="fas fa-book-open"></i> La tua libreiria</button></li>
+                    <li><div class="height-100"></div><button><i class="fas fa-home"></i><span> Home</span></button></li>
+                    <li><div class="height-100"></div><button><i class="fas fa-search"></i><span> Cerca</span></button></li>
+                    <li><div class="height-100"></div><button><i class="fas fa-book-open"></i><span> La tua libreiria</span></button></li>
                 </ul>
 
                 <div class="playlist">
@@ -47,7 +48,7 @@
                 </div>
 
                 <div class="playlist-footer">
-                    <button><i class="fas fa-arrow-circle-down"></i>  Installa app</button>
+                    <button><i class="fas fa-arrow-circle-down"></i><span> Installa app</span></button>
                     <div></div>
                     <button><i class="fas fa-user-circle"></i><span> John Doe</span></button>
                 </div>
